FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/Acccount__c.object
<CustomObject>
    <description>test account custom object</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Test Help Text</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID_Acc__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID_Acc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1111</fullName>
                </value>
                <value>
                    <fullName>AAAA</fullName>
                </value>
                <value>
                    <fullName>BBBB</fullName>
                </value>
                <value>
                    <fullName>CCCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sample_date__c</fullName>
        <inlineHelpText>test change</inlineHelpText>
        <label>sample date</label>
        <type>DateTime</type>
    </fields>
    <label>Acccount</label>
    <nameField>
        <label>Acccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    <recordTypes>
        <fullName>Record_type_1</fullName>
        <active>true</active>
        <label>Record type 1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>test_validation_v1</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(sample_date__c  )</errorConditionFormula>
        <errorDisplayField>sample_date__c</errorDisplayField>
        <errorMessage>this sample date field cant be cannot be blank</errorMessage>
    </validationRules>
</CustomObject>